# desrim

./: LISENCE  Makefile  Makefile.am  Makefile.in  README  README.md  config.guess  config.status  config.sub  configure  configure.in  depcomp  desrim.c  desrim.h  desrim_internal.h  desrim_malloc.c  desrim_plat.c  desrim_plat.h  desrim_queue.h  install-sh  local.m4
